fix the scroll down button when the window height is too small

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -709,3 +709,18 @@ a
         }
     }
 }
+
+@media screen and (max-height: 900px)
+{
+    .section1 .scroll
+    {
+        bottom: 0;
+    }
+}
+@media screen and (max-height: 810px)
+{
+    .section1 .scroll
+    {
+        display: none;
+    }
+}
